--- a/templates/zerver/landing_nav.html
+++ b/templates/zerver/landing_nav.html
@@ -9,7 +9,7 @@
 {% if not isolated_page %}
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/hello">
         <img src="/static/images/logo/zulip-org-logo.svg" alt="zulip-org-logo" loading="lazy">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
