--- a/templates/zerver/landing_nav.html
+++ b/templates/zerver/landing_nav.html
@@ -21,7 +21,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Features</a>
               <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Overview</a>
+                <a class="dropdown-item" href="/features">Overview</a>
                 <a class="dropdown-item" href="#">Integrations</a>
                 <a class="dropdown-item" href="#">Rest API</a>
                 <a class="dropdown-item" href="#">Security</a>
