--- a/static/templates/user_info_popover_content.hbs
+++ b/static/templates/user_info_popover_content.hbs
@@ -35,7 +35,7 @@
         {{#if is_bot}}
             {{#if bot_owner}}
                 <li>{{#tr this}}Owner{{/tr}}:
-                    <span class="bot-owner-name" data-bot-owner-id='{{ bot_owner.user_id }}'>
+                    <span class="bot-owner-name" data-user-id='{{ bot_owner.user_id }}'>
                         {{bot_owner.full_name}}
                     </span>
                 </li>
