api_docs: Add fragment references for all parameters.
This makes it convenient to link to a specific parameter accepted by
Zulip API endpoint.

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -1680,6 +1680,17 @@ label.label-title {
 .api-argument {
     .api-argument-name {
         font-family: monospace;
+
+        .api-argument-hover-link i.fa {
+            opacity: 0;
+            font-size: 0.9em;
+        }
+
+        &:hover .api-argument-hover-link i.fa {
+            opacity: 1;
+            color: hsl(0, 0%, 0%);
+            cursor: pointer;
+        }
     }
 
     .api-argument-example-label {
@@ -1692,6 +1703,7 @@ label.label-title {
         font-size: 12px;
         color: hsl(14, 75%, 60%);
     }
+
     .api-argument-optional {
         text-transform: uppercase;
         font-weight: 400;
