--- a/templates/zerver/dev_login.html
+++ b/templates/zerver/dev_login.html
@@ -22,7 +22,7 @@ page can be easily identified in it's respective JavaScript file -->
                         <h2>{{_('Owners') }}</h2>
                         {% if direct_owners %}
                             {% for direct_owner in direct_owners %}
-                            <p><input type="submit" formaction="{{ direct_owner.realm.uri }}{{ url('zerver.views.auth.dev_direct_login') }}"
+                            <p><input type="submit" formaction="{{ direct_owner.realm.uri }}{{ url('login-local') }}"
                                       name="direct_email" class="btn-direct btn-admin" value="{{ direct_owner.delivery_email }}" /></p>
                             {% endfor %}
                         {% else %}
@@ -31,7 +31,7 @@ page can be easily identified in it's respective JavaScript file -->
                         <h2>{{ _('Administrators') }}</h2>
                         {% if direct_admins %}
                             {% for direct_admin in direct_admins %}
-                            <p><input type="submit" formaction="{{ direct_admin.realm.uri }}{{ url('zerver.views.auth.dev_direct_login') }}"
+                            <p><input type="submit" formaction="{{ direct_admin.realm.uri }}{{ url('login-local') }}"
                                       name="direct_email" class="btn-direct btn-admin" value="{{ direct_admin.delivery_email }}" /></p>
                             {% endfor %}
                         {% else %}
@@ -40,7 +40,7 @@ page can be easily identified in it's respective JavaScript file -->
                         <h2>{{ _('Guest users') }}</h2>
                         {% if guest_users %}
                             {% for guest_user in guest_users %}
-                            <p><input type="submit" formaction="{{ guest_user.realm.uri }}{{ url('zerver.views.auth.dev_direct_login') }}"
+                            <p><input type="submit" formaction="{{ guest_user.realm.uri }}{{ url('login-local') }}"
                                       name="direct_email" class="btn-direct btn-admin" value="{{ guest_user.delivery_email }}" /></p>
                             {% endfor %}
                         {% else %}
@@ -52,7 +52,7 @@ page can be easily identified in it's respective JavaScript file -->
                         <h2>{{ _('Normal users') }}</h2>
                         {% if direct_users %}
                             {% for direct_user in direct_users %}
-                            <p><input type="submit" formaction="{{ direct_user.realm.uri }}{{ url('zerver.views.auth.dev_direct_login') }}"
+                            <p><input type="submit" formaction="{{ direct_user.realm.uri }}{{ url('login-local') }}"
                                       name="direct_email" class="btn-direct btn-admin" value="{{ direct_user.delivery_email }}" /></p>
                             {% endfor %}
                         {% else %}
@@ -62,7 +62,7 @@ page can be easily identified in it's respective JavaScript file -->
                 </div>
             </div>
         </form>
-        <form name="change_realm" action="{{ url('zerver.views.auth.login_page') }}" method="post">
+        <form name="change_realm" action="{{ url('login_page') }}" method="post">
             {{ csrf_input }}
             <h2>Realm</h2>
             <select name="new_realm" onchange="this.form.submit()">
@@ -74,10 +74,10 @@ page can be easily identified in it's respective JavaScript file -->
         </form>
         <div id="devtools-wrapper">
             <div id="devtools-registration">
-                <form name="register_dev_user" action="{{ url('zerver.views.development.registration.register_development_user') }}" method="POST">
+                <form name="register_dev_user" action="{{ url('register_dev_user') }}" method="POST">
                     <input type="submit" class="btn btn-admin" value="Create New User" />
                 </form>
-                <form name="register_dev_realm" action="{{ url('zerver.views.development.registration.register_development_realm') }}" method="POST">
+                <form name="register_dev_realm" action="{{ url('register_dev_realm') }}" method="POST">
                     <input type="submit" class="btn btn-admin" value="Create New Realm" />
                 </form>
             </div>
