--- a/templates/zerver/register.html
+++ b/templates/zerver/register.html
@@ -23,7 +23,7 @@ Form is validated both client-side using jquery-validate (see signup.js) and ser
             {% endtrans %}
         </div>
 
-        <form method="post" class="form-horizontal white-box" id="registration" action="{{ url('zerver.views.registration.accounts_register') }}">
+        <form method="post" class="form-horizontal white-box" id="registration" action="{{ url('accounts_register') }}">
             {{ csrf_input }}
 
             <fieldset class="org-registration">
