--- a/templates/zerver/app/compose.html
+++ b/templates/zerver/app/compose.html
@@ -64,7 +64,7 @@
                     <div class="compose_table">
                         <div id="stream-message">
                             <div class="stream-selection-header-colorblock message_header_stream left_part"></div>
-                            <div class="right_part">
+                            <div class="right_part" id = 'right_part'>
                                 <span id="compose-lock-icon">
                                     <i class="fa fa-lock" title="{{ _('This is a private stream') }}" aria-hidden="true"></i>
                                 </span>
