compose: Display Formatting button as "Help".
The Formatting button that opens our Markdown help popover previously
had an "A" as its icon (the Font Awesome icon for font). This commit
changes the link to spell out "Help" to make it more discoverable.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -21,7 +21,7 @@
             }
         }
 
-        .drafts-link {
+        .message-control-link {
             float: left;
         }
 
@@ -126,10 +126,9 @@
         box-shadow: none !important;
     }
 
-    .drafts-link {
+    .message-control-link {
         position: relative;
-        margin-right: 1em;
-        margin-left: 5px;
+        margin-right: 5px;
         top: 2px;
     }
 }
