emoji_picker: Fix search input length.
This was probably a regression from our upgrade to bootstrap 2.3.2.

--- a/static/styles/reactions.css
+++ b/static/styles/reactions.css
@@ -169,6 +169,7 @@
                 margin: auto;
                 padding-left: 22px;
                 width: calc(100% - 22px - 8px);
+                font-size: 90%;
             }
         }
 
