--- a/static/templates/emoji_popover_content.hbs
+++ b/static/templates/emoji_popover_content.hbs
@@ -1,5 +1,5 @@
 <div class="emoji-popover">
-    <div class="emoji-popover-top input-append">
+    <div class="emoji-popover-top">
         <input class="emoji-popover-filter" type="text" autofocus placeholder="{{t 'Search' }}" />
         <i class="fa fa-search" aria-hidden="true"></i>
     </div>
