--- a/static/templates/recent_topics_table.hbs
+++ b/static/templates/recent_topics_table.hbs
@@ -16,7 +16,7 @@
                 <th data-sort="stream_sort">{{t 'Stream' }}</th>
                 <th data-sort="topic_sort">{{t 'Topic' }}</th>
                 <th class='participants_header'>{{t 'Participants' }}</th>
-                <th data-sort="numeric" data-sort-prop="last_msg_id" class="last_msg_time_header active descend">{{t 'Last message' }}</th>
+                <th data-sort="numeric" data-sort-prop="last_msg_id" class="last_msg_time_header active descend">{{t 'Time' }}</th>
             </tr>
         </thead>
         <tbody class="required-text" data-empty="{{t 'No topics match your current filter.' }}"></tbody>
