msg_edit: Don't show checkbox label in next line.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1440,6 +1440,7 @@ div.focused_table {
     margin: 0 5px 5px 0 !important;
     align-self: center;
     width: 100%;
+    white-space: nowrap;
 
     label.checkbox {
         margin-right: 0 !important;
