--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -38,6 +38,22 @@
             </div>
         </div>
     </div>
+    <div class="green-bg-feature purple-bg-feature feature-section d-lg-flex position-relative">
+        <div class="row">
+            <img class="homepage_hero_img mobile-visible col-lg-8" src="/static/images/features/message-formatting.png" />
+            <div class="content col-lg-4">
+                <h1>Beautiful messaging</h1>
+                <p>
+                    Get more done instantly with advanced markdown support.
+                </p>
+                <div class="mt-5">
+                    <a href="" class="btn btn-primary text-uppercase
+                    transparent-more-btn">View Features</a>
+                </div>
+            </div>
+            <img class="homepage_hero_img desktop-visible col-lg-8" src="/static/images/features/message-formatting.png" />
+        </div>
+    </div>
     <div class="productivity purple-bg-feature feature-section d-lg-flex position-relative">
         <div class="row">
             <img class="homepage_hero_img mobile-visible col-lg-8" src="/static/images/landing-page/FeaturesPage_Productivity.svg" />
@@ -69,7 +85,7 @@
             </div>
         </div>
     </div>
-    <div class="customization feature-section d-lg-flex position-relative">
+    <div class="green-bg-feature feature-section d-lg-flex position-relative">
         <div class="row">
             <img class="homepage_hero_img mobile-visible col-lg-8" src="/static/images/landing-page/FeaturesPage_Customization.svg" />
             <div class="content col-lg-4">
