message_edit: Display Formatting button as "Help".
Match the compose change b245e1e49a9b33d6016c09a7cc76a6bd500e414f.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1371,9 +1371,10 @@ div.focused_table {
 }
 
 .message-edit-feature-group {
-    display: inline-block;
+    display: inline-flex;
     margin-left: 10px;
     margin-bottom: -5px;
+    align-items: baseline;
 }
 
 .topic_edit {
