--- a/static/templates/stream_settings_checkbox.hbs
+++ b/static/templates/stream_settings_checkbox.hbs
@@ -14,7 +14,9 @@
     {{!-- Tooltips for settings --}}
     {{#if (eq setting_name "is_muted")}}
     <p class="mute-note {{#unless is_muted}}hide-mute-note{{/unless}}">
-        {{t "Muted streams don't show up in \"All messages\" or generate notifications unless you are mentioned." }}
+        {{#tr this}}
+        Muted streams don't show up in "All messages" or generate notifications unless you are mentioned.
+        {{/tr}}
     </p>
     {{/if}}
     {{#if (eq setting_name "push_notifications")}}
