--- a/static/templates/admin_user_group_list.hbs
+++ b/static/templates/admin_user_group_list.hbs
@@ -9,9 +9,25 @@
             <img class="checkmark" src="/static/images/checkbox-green.svg" />
             {{t 'Saved' }}
         </button>
-        <button class="button save-status btn-danger small">
-            {{t 'Discard changes' }}
-        </button>
+        <div class="save-button-controls hide">
+            <div class="inline-block organization-submission subsection-changes-save">
+                <div class="save-discard-widget-button button primary save-button" type="button" data-status="save">
+                    <span class="fa fa-spinner fa-spin save-discard-widget-button-loading"></span>
+                    <span class="fa fa-check save-discard-widget-button-icon"></span>
+                    <span class="save-discard-widget-button-text">
+                        {{t 'Save changes' }}
+                    </span>
+                </div>
+            </div>
+            <div class="inline-block subsection-changes-discard">
+                <div class="save-discard-widget-button button discard-button" type="button" id="org-discard-{{section_name}}">
+                    <span class="fa fa-times save-discard-widget-button-icon"></span>
+                    <span class="save-discard-widget-button-text">
+                        {{t 'Discard' }}
+                    </span>
+                </div>
+            </div>
+        </div>
         <button class="button rounded small delete btn-danger">
             {{t 'Delete' }}
         </button>
@@ -20,8 +36,5 @@
     <div class="pill-container" data-group-pills="{{id}}">
         <div class="input" contenteditable="true" data-placeholder="{{t 'Add member...' }}"></div>
     </div>
-    <p class="save-instructions">
-        {{t "Click outside the input box to save. We'll automatically notify anyone that was added or removed."}}
-    </p>
 </div>
 {{/with}}
