add role and aria-labelledby to overlays

--- a/static/templates/draft_table_body.hbs
+++ b/static/templates/draft_table_body.hbs
@@ -1,8 +1,8 @@
-<div id="draft_overlay" class="overlay new-style" data-overlay="drafts">
+<div role="dialog" aria-labelledby="draftsTitle" id="draft_overlay" class="overlay new-style" data-overlay="drafts">
     <div class="flex overlay-content">
         <div class="drafts-container modal-bg">
             <div class="drafts-header">
-                <h1>{{t 'Drafts' }}</h1>
+                <h1 id="draftsTitle">{{t 'Drafts' }}</h1>
                 <div class="exit">
                     <span class="exit-sign">&times;</span>
                 </div>
