--- a/static/templates/subscription_table_body.hbs
+++ b/static/templates/subscription_table_body.hbs
@@ -1,9 +1,9 @@
-<div id="subscription_overlay" class="overlay new-style" data-overlay="subscriptions">
+<div role="dialog" aria-labelledby="subscriptionTitle"  id="subscription_overlay" class="overlay new-style" data-overlay="subscriptions">
     <div class="flex overlay-content">
         <div class="subscriptions-container modal-bg">
             <div class="subscriptions-header">
                 <div class="fa fa-chevron-left"></div>
-                <span class="subscriptions-title">{{t 'Streams' }}</span>
+                <span id="subscriptionTitle" class="subscriptions-title">{{t 'Streams' }}</span>
                 <div class="exit">
                     <span class="exit-sign">&times;</span>
                 </div>
