--- a/templates/zerver/app/lightbox_overlay.html
+++ b/templates/zerver/app/lightbox_overlay.html
@@ -1,4 +1,4 @@
-<div id="lightbox_overlay" class="overlay new-style" data-overlay="lightbox">
+<div role="dialog" aria-labelledby="lightboxTitle"  id="lightbox_overlay" class="overlay new-style" data-overlay="lightbox">
     <div class="image-info-wrapper">
         <div class="image-description">
             <div class="title"></div>
