--- a/templates/zerver/app/recent_topics.html
+++ b/templates/zerver/app/recent_topics.html
@@ -1,8 +1,8 @@
-<div id="recent_topics_overlay" class="overlay new-style" data-overlay="recent_topics">
+<div role="dialog" aria-labelledby="recentTopicsTitle"  id="recent_topics_overlay" class="overlay new-style" data-overlay="recent_topics">
     <div class="flex overlay-content">
         <div class="recent_topics_container modal-bg">
             <div class="recent_topics_header">
-                <h1>{% trans %}Recent topics (beta){% endtrans %}</h1>
+                <h1 id="recentTopicsTitle">{% trans %}Recent topics (beta){% endtrans %}</h1>
                 <div class="exit">
                     <span class="exit-sign">&times;</span>
                 </div>
