--- a/templates/zerver/app/settings_overlay.html
+++ b/templates/zerver/app/settings_overlay.html
@@ -1,7 +1,7 @@
 <div id="settings_page" class="new-style overlay-content modal-bg">
     <div class="settings-header mobile">
         <i class="fa fa-chevron-left" aria-hidden="true"></i>
-        <h1>{{ _('Settings') }}<span class="section"></span></h1>
+        <h1 id="settingsTitle" >{{ _('Settings') }}<span class="section"></span></h1>
         <div class="exit">
             <span class="exit-sign">&times;</span>
         </div>
