--- a/static/templates/hotspot_overlay.hbs
+++ b/static/templates/hotspot_overlay.hbs
@@ -1,7 +1,7 @@
-<div id="hotspot_{{name}}_overlay" class="hotspot overlay" data-overlay="hotspot_{{name}}_overlay">
-    <div class="hotspot-popover">
+<div role="dialog" aria-labelledby="hotspotTitle" id="hotspot_{{name}}_overlay" class="hotspot overlay" data-overlay="hotspot_{{name}}_overlay">
+     <div class="hotspot-popover">
         <div class="hotspot-popover-top">
-            <h1 class="hotspot-title">{{title}}</h1>
+            <h1  id="hotspotTitle" class="hotspot-title">{{title}}</h1>
         </div>
         <div class="hotspot-popover-content">
             <p class="hotspot-description">{{description}}</p>
