--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -46,7 +46,7 @@
 {% include "zerver/app/subscriptions.html" %}
 {% include "zerver/app/drafts.html" %}
 {% include "zerver/app/recent_topics.html" %}
-<div id="settings_overlay_container" class="overlay" data-overlay="settings" aria-hidden="true">
+<div role="dialog" aria-labelledby="settingsTitle" id="settings_overlay_container" class="overlay" data-overlay="settings" aria-hidden="true">
     {% include "zerver/app/settings_overlay.html" %}
 </div>
 
@@ -125,7 +125,7 @@
             {% include "zerver/app/right_sidebar.html" %}
         </div><!--/right sidebar-->
     </div><!--/row-->
-    <div class="informational-overlays overlay new-style" data-overlay="informationalOverlays" aria-hidden="true">
+    <div role="dialog" aria-labelledby="informationalTitle" class="informational-overlays overlay new-style" data-overlay="informationalOverlays" aria-hidden="true">
         <div class="overlay-content modal-bg">
             <div class="overlay-tabs">
                 <button class="button no-style exit">&times;</button>
@@ -137,10 +137,10 @@
             </div>
         </div>
     </div>
-    <div class="user_status_overlay overlay new-style" data-overlay="user_status_overlay" aria-hidden="true">
+    <divrole="dialog" aria-labelledby="userStatusTitle" class="user_status_overlay overlay new-style" data-overlay="user_status_overlay" aria-hidden="true">
         <div class="overlay-content modal-bg">
             <div class="user-status-header">
-                <h1>Set a status</h1>
+                <h1 aria-labelledby="userStatusTitle">Set a status</h1>
                 <div class="exit">
                     <span class="exit-sign">&times;</span>
                 </div>
