--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -1,9 +1,9 @@
-<div id="invite-user" class="overlay flex new-style" tabindex="-1" role="dialog" data-overlay="invite"
+<div  aria-labelledby="inviteTitle" id="invite-user" class="overlay flex new-style" tabindex="-1" role="dialog" data-overlay="invite"
   aria-labelledby="invite-user-label" aria-hidden="true">
     <div class="overlay-content modal-bg">
         <div class="modal-header">
             <button type="button" class="exit" aria-label="{{ _('Close') }}"><span aria-hidden="true">&times;</span></button>
-            <h3 id="invite-user-label">{% trans %}Invite users to Zulip{% endtrans %}</h3>
+            <h3 id="inviteTitle" id="invite-user-label">{% trans %}Invite users to Zulip{% endtrans %}</h3>
         </div>
         <form id="invite_user_form" class="form-horizontal">{{ csrf_input }}
             <div class="modal-body" data-simplebar data-simplebar-auto-hide="false">
