fix: fix indentation problem in index.html and remove extra id in ivite_user
I removed the indentation in index because it did not pass the checks and removed extra id because we can't have two id in one html elemnt

--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -140,7 +140,7 @@
     <div role="dialog" aria-labelledby="userStatusTitle" class="user_status_overlay overlay new-style" data-overlay="user_status_overlay" aria-hidden="true">
         <div class="overlay-content modal-bg">
             <div class="user-status-header">
-                <h1 aria-labelledby="userStatusTitle">Set a status</h1>
+                <h1 id="userStatusTitle">Set a status</h1>
                 <div class="exit">
                     <span class="exit-sign">&times;</span>
                 </div>
