right_sidebar: Show login btn  & realm desc for web_public_visitor.

--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -195,6 +195,12 @@
     color: inherit;
 }
 
+.right-sidebar-items {
+    .login_button {
+        margin-right: 10px;
+    }
+}
+
 /* This max-width must be synced with message_viewport.is_narrow */
 @media (width < $xl_min) {
     #sidebar-keyboard-shortcuts {
