login_to_access: Modal which blocks access for web_public_visitor.
We will use this modal for any narrow / hash we don't want
web public visitor to access.

--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -481,3 +481,35 @@
 .tip::before {
     content: "\f0a2";
 }
+
+.color_animated_button {
+    display: flex;
+    justify-content: center;
+    background-color: hsl(0, 0%, 90%);
+
+    span {
+        color: hsl(0, 0%, 0%);
+    }
+
+    &:hover {
+        cursor: pointer;
+        background-color: hsl(228, 96%, 71%);
+        color: hsl(0, 0%, 100%);
+
+        span {
+            color: hsl(0, 0%, 100%);
+            transition: all 0.2s ease;
+        }
+
+        transition: all 0.2s ease;
+    }
+
+    * {
+        padding: 6px 3px;
+    }
+
+    .fa {
+        position: relative;
+        top: 3px;
+    }
+}
