--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2903,3 +2903,16 @@ select.inline_select_topic_edit {
         top: 5%;
     }
 }
+
+#login_to_access_modal {
+    .go_back_button .fa {
+        position: fixed;
+        top: 11px;
+        left: 30px;
+    }
+
+    .login_to_access_label {
+        font-size: 1.1rem;
+        font-weight: bold;
+    }
+}
