--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -175,5 +175,6 @@
     <div id="delete-topic-modal-holder"></div>
     <div class="left-sidebar-modal-holder"></div>
     <div id="move-a-topic-modal-holder"></div>
+    <div id="login-to-access-modal-holder"></div>
 </div>
 {% endblock %}
