streams_filter_icon: Convert from id to class.
This will allow us repeat the class which we cannot do with id.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -55,7 +55,7 @@ li.show-more-topics {
 }
 
 #streams_inline_cog,
-#streams_filter_icon {
+.streams_filter_icon {
     float: right;
     opacity: 0.5;
     font-size: 13px;
