streams_filter_icon: Hide for web_public_visitor.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -68,6 +68,10 @@ li.show-more-topics {
     }
 }
 
+.streams_filter_icon.web_public {
+    margin-right: 10px;
+}
+
 #streams_inline_cog {
     margin-right: 10px;
 }
