left_sidebar: Change icon for all message to globe.
Home icon no longer fits it since recent topics is now the default
view.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -232,6 +232,15 @@ li.active-sub-filter {
         display: inline-block;
         min-width: $left_col_size;
         text-align: center;
+
+        .globe-web-icon {
+            filter: brightness(1) invert(0);
+            opacity: 0.7;
+            width: 12px;
+            position: relative;
+            left: -1px;
+            top: 1px;
+        }
     }
 
     .count {
