Copy-link-button to invite users
A convenient copy-link button was added inside the Invite users to Zulip modal to invite users via generated url.

--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -63,3 +63,4 @@
         </form>
     </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
