zcommand: Add new command to change themes.
Fixes: #15818

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -236,6 +236,10 @@ div[id^="message-edit-send-status"],
     display: none;
 }
 
+#compose-send-status p {
+    margin: 0;
+}
+
 #compose-send-status .progress {
     height: 10px;
     margin-bottom: 10px;
